fix paddings and margins on smaller devices

--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -38,7 +38,10 @@ body {
 	justify-content: space-around;
 	flex-wrap: wrap;
 	gap: 4rem;
-	margin: 0 3rem;
+	margin: 4rem 0;
+	p {
+		margin: 0;
+	}
 	.paragraph {
 		box-shadow: 0 0 50px 20px rgb(0, 0, 0);
 		background-color: rgba(0, 0, 0, 0.75);
